--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "workbench.colorTheme": "Visual Assist Dark Theme",
+    "workbench.colorTheme": "One Dark Pro Darker",
     "editor.tabSize": 4,
     "files.associations": {
         "algorithm": "cpp",
